--- a/.github/config.json
+++ b/.github/config.json
@@ -1,78 +1,113 @@
-[
-  {
-    "root": ".",
-    "projectType": "other",
-    "versioning": {
-      "source": "milestones",
-      "type": "SemVer"
+{
+  "labels": {
+    "[X] Documented :scroll:": {
+      "name": "[X] Documented :scroll:",
+      "description": "Has been documented!",
+      "color": "0052cc"
     },
-    "pr": {
-      "labels": {
-        "backend": {
-          "requires": 1,
-          "conditions": [
-            {
-              "type": "filesMatch",
-              "glob": "backend/**/*"
-            }
-          ]
-        },
-        "UI": {
-          "requires": 1,
-          "conditions": [
-            {
-              "type": "filesMatch",
-              "glob": "ui/**/*"
-            }
-          ]
-        },
-        "documentation": {
-          "requires": 1,
-          "conditions": [
-            {
-              "type": "filesMatch",
-              "glob": "documentation/**/*"
-            }
-          ]
-        },
-        "draft": {
-          "requires": 1,
-          "conditions": [
-            {
-              "type": "isDraft",
-              "value": true
-            }
-          ]
-        },
-        "waiting_review": {
-          "requires": 1,
-          "conditions": [
-            {
-              "type": "pendingReview",
-              "value": true
-            }
-          ]
-        },
-        "changes_requested": {
-          "requires": 1,
-          "conditions": [
-            {
-              "type": "requestedChanges",
-              "value": true
-            }
-          ]
-        },
-        "ready_to_test": {
-          "requires": 1,
-          "conditions": [
-            {
-              "type": "isApproved",
-              "value": true,
-              "required": 1
-            }
-          ]
+    "[X] Investigation :mag:": {
+      "name": "[X] Investigation :mag:",
+      "color": "D107F7"
+    },
+    "[X] Accepted :heavy_check_mark:": {
+      "name": "[X] Accepted :heavy_check_mark:",
+      "color": "072dbc"
+    },
+    "[X] Awaiting Review :eyes:": {
+      "name": "[X] Awaiting Review :eyes:",
+      "color": "FBCA04"
+    },
+    "[X] Changes Requested :diamonds:": {
+      "name": "[X] Changes Requested :diamonds:",
+      "color": "f4ff1f"
+    },
+    "[X] In Progress :gear:": {
+      "name": "[X] In Progress :gear:",
+      "color": "C5DEF5"
+    },
+    "[X] Needs documentation :pencil2:": {
+      "name": "[X] Needs documentation :pencil2:",
+      "description": "This needs to be documented!",
+      "color": "0052cc"
+    }
+  },
+  "runners": [
+    {
+      "root": ".",
+      "projectType": "other",
+      "versioning": {
+        "source": "milestones",
+        "type": "SemVer"
+      },
+      "pr": {
+        "labels": {
+          "backend": {
+            "requires": 1,
+            "conditions": [
+              {
+                "type": "filesMatch",
+                "glob": "backend/**/*"
+              }
+            ]
+          },
+          "UI": {
+            "requires": 1,
+            "conditions": [
+              {
+                "type": "filesMatch",
+                "glob": "ui/**/*"
+              }
+            ]
+          },
+          "documentation": {
+            "requires": 1,
+            "conditions": [
+              {
+                "type": "filesMatch",
+                "glob": "documentation/**/*"
+              }
+            ]
+          },
+          "draft": {
+            "requires": 1,
+            "conditions": [
+              {
+                "type": "isDraft",
+                "value": true
+              }
+            ]
+          },
+          "waiting_review": {
+            "requires": 1,
+            "conditions": [
+              {
+                "type": "pendingReview",
+                "value": true
+              }
+            ]
+          },
+          "changes_requested": {
+            "requires": 1,
+            "conditions": [
+              {
+                "type": "requestedChanges",
+                "value": true
+              }
+            ]
+          },
+          "ready_to_test": {
+            "requires": 1,
+            "conditions": [
+              {
+                "type": "isApproved",
+                "value": true,
+                "required": 1
+              }
+            ]
+          }
         }
       }
     }
-  }
-]
+  ]
+
+}
