--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         name: Checkout
-      - uses: Resnovas/label-mastermind@2.1.3
+      - uses: Resnovas/label-mastermind@master
         name: Labeling
         with:
           skipDelete: true
