--- a/.github/label-config.json
+++ b/.github/label-config.json
@@ -83,6 +83,10 @@
               {
                 "type": "pendingReview",
                 "value": true
+              },
+              {
+                "type": "isApproved",
+                "value": false
               }
             ]
           },
